# HowLong-YouTube

./: .gitignore  pyproject.toml  utils.py
api/: playlist.py  videos.py
core/: compute.py
docs/: architecture.md  prd.md  problem_statement.md
src/howlong/: cli.py  main.py  utils.py
src/howlong/api/: metadata.py  playlist.py
src/howlong/core/: compute.py  config.py  display.py
